# ISAC 项目 Python 包配置（PEP 621）
# 定义 pip 安装元数据、setuptools 打包规则与 pytest 默认选项

[build-system]
# PEP 517：使用 setuptools 作为构建后端
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# 包名、版本与 Python 版本要求
name = "isac"
version = "0.1.0"
description = "通感一体化（ISAC）仿真平台：核心包 isac（OFDM 通信与感知链路）及部署辅助包 isac_imp"
requires-python = ">=3.11"
# pip install -e . 时的基础运行时依赖；Sionna / CUDA 等完整环境见 requirements.txt
dependencies = [
    # 深度学习
    "torch",
    # 数值计算
    "numpy",
    "scipy",
    # 进度与表格
    "tqdm",
    "tabulate",
    "pandas",
    # 可视化与图像
    "matplotlib",
    "pillow",
    "imageio",
]

[tool.setuptools]
# src layout：包源码位于 src/ 目录
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# 显式包含 isac 与 isac_imp 两个顶层包
where = ["src"]
include = ["isac", "isac_imp"]

[tool.setuptools.package-data]
# 随 isac 分发的 RT 场景资源（.xml / .ply）
isac = ["**/*.py", "channel/rt/scenes/**/*.xml", "channel/rt/scenes/**/*.ply"]

[tool.pytest.ini_options]
# pytest 运行时自动添加 src 到 Python 路径
pythonpath = ["src"]
# 测试用例目录
testpaths = ["tests"]
# 忽略第三方库产生的已知 DeprecationWarning
filterwarnings = [
    "ignore:.*astroid.*:DeprecationWarning",
    "ignore::DeprecationWarning:asttokens",
]
